--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -127,7 +127,7 @@ $RobotoLight: RobotoLight;
     &-block {
       width: 100%;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
     }
 
     &-item {
